--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="row">
       <div class="medium-4 columns">
         <h3>Photoshop</h3>
-        <p>Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla, orci ac euismod semper, magna.</p>
+        <p>Knowledgable and experienced in Photoshop </p>
       </div>
       <div class="medium-4 columns">
         <h3>Javascript</h3>
