--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="callout large">
       <div class="row column text-center">
         <h1>Amy Dempster Resume</h1>
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in dui mauris.</p>
+        <p class="lead">This will become a website to give all the information of my resume as well as show off the knowledge of many of my skills</p>
         <a href="#" class="button large">Learn More</a>
         <a href="#" class="button large hollow">Learn Less</a>
       </div>
